# clean-python

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  MANIFEST.in  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: bump.yml  lint.yml  release.yml  test.yml
benchmarks/sql-comparison/: README.md  locustfile.py
benchmarks/sql-comparison/sql_comparison/: __init__.py  application.py  domain.py  presentation.py  service.py  sql_gateway.py  sql_model.py
clean_python/: __init__.py  async_actor.py  attr_dict.py  fastapi_access_logger.py  gateway.py  internal_gateway.py  oauth2.py  scripts.py  service.py  sql_provider.py  testing.py  value_object.py
clean_python/amqp/: __init__.py  celery_rmq_broker.py
clean_python/api_client/: __init__.py  api_gateway.py  api_provider.py  exceptions.py  files.py  response.py  sync_api_provider.py
clean_python/base/: __init__.py
clean_python/base/application/: __init__.py  manage.py
clean_python/base/domain/: __init__.py  context.py  domain_event.py  domain_service.py  exceptions.py  filter.py  gateway.py  json.py  pagination.py  repository.py  root_entity.py  types.py  user.py  value.py  value_object.py
clean_python/base/infrastructure/: __init__.py  gateway.py  in_memory_gateway.py  internal_gateway.py  lru_cache.py  mapper.py  (+5 more)
clean_python/blinker/: __init__.py  blinker_event_provider.py
clean_python/celery/: __init__.py  base_task.py  celery_rmq_broker.py  celery_task_logger.py  config.py  kubernetes.py
clean_python/dramatiq/: __init__.py  async_actor.py  dramatiq_task_logger.py  sleep_task.py  testing.py
clean_python/fastapi/: __init__.py  asgi.py  context.py  error_responses.py  fastapi_access_logger.py  request_query.py  resource.py  schema.py  security.py  service.py
clean_python/fluentbit/: __init__.py  fluentbit_gateway.py
clean_python/nanoid/: __init__.py  nanoid.py
clean_python/oauth2/: __init__.py  claims.py  client_credentials.py  oauth2.py  token.py  token_verifier.py
clean_python/s3/: __init__.py  bucket_options.py  key_mapper.py  s3_bucket_options.py  s3_client.py  s3_gateway.py  s3_provider.py  sync_s3_gateway.py  sync_s3_provider.py  types.py
clean_python/sql/: __init__.py  asyncpg_sql_database.py  sql_builder.py  sql_gateway.py  sql_provider.py  sqlalchemy_async_sql_database.py  sqlalchemy_sync_sql_database.py  sync_sql_gateway.py  testing.py
clean_python/testing/: __init__.py  attr_dict.py  debugger.py  extract_minimum_requirements.py  fastapi_profiler.py  profilers.py  profyle_fastapi_profiler.py  viztracer_fastapi_profiler.py
clean_python/tests/: test_async_actor.py  test_celery_rmq_broker.py  test_dramatiq_task_logger.py  test_exceptions.py  test_fastapi_access_logger.py  test_gateway.py  test_internal_gateway.py  test_manage.py  test_oauth2.py  test_repository.py  test_request_query.py  test_resource.py  test_root_entity.py  test_scripts.py  test_service.py  test_sql_gateway.py  test_value_object.py
integration_tests/: conftest.py  sql_model.py  test_api_gateway.py  test_api_provider.py  test_int_api_gateway.py  test_int_api_provider.py  test_int_celery.py  test_int_client_credentials.py  test_int_s3_gateway.py  test_int_sync_api_gateway.py  test_int_sync_api_provider.py  test_s3_client.py  test_s3_gateway.py  test_s3_gateway_multitenant.py  test_sql_database.py  test_sql_gateway.py  test_sql_provider.py  test_sync_s3_gateway.py  test_sync_s3_gateway_multitenant.py  test_sync_sql_database.py  test_sync_sql_gateway.py
integration_tests/celery_example/: __init__.py  celery_app.py  celery_worker.py  consumer.py  logger.py  producer.py  shared.py  tasks.py
integration_tests/fastapi_example/: __init__.py  application.py  domain.py  presentation.py
requirements/: all.txt  api_client.txt  auth.in  auth.txt  base.in  base.txt  celery.txt  fastapi.txt  fluentbit.txt  nanoid.txt  s3.in  s3.txt  s3_sync.in  s3_sync.txt  sql.in  sql.txt  sql_sync.txt  test.in  test.txt
scripts/: extract_minimum_requirements.py  init-db.sql  install_latest.sh  install_minimum.sh  wait-for-postgres.sh
sql_comparison/: asyncpg_provider.py  base_provider.py  locustfile.py  service.py  sqlalchemy_provider.py
tests/: test_async_actor.py  test_celery_rmq_broker.py  test_context.py  test_domain_event.py  test_dramatiq_task_logger.py  test_exceptions.py  test_fastapi_access_logger.py  test_filter.py  test_gateway.py  test_internal_gateway.py  test_lru_cache.py  test_manage.py  test_oauth2.py  test_repository.py  test_request_query.py  test_resource.py  test_root_entity.py  test_s3_gateway.py  test_service.py  test_sql_gateway.py  test_sync_gateway.py  test_sync_internal_gateway.py  test_sync_lru_cache.py  test_sync_manage.py  test_sync_repository.py  test_typed_internal_gateway.py  test_value_object.py
tests/amqp/: test_celery_rmq_broker.py
tests/api_client/: test_api_gateway.py  test_api_provider.py  test_sync_api_gateway.py  test_sync_api_provider.py  test_sync_files.py
tests/blinker/: test_blinker_event_provider.py
tests/celery/: test_celery_base_task.py  test_celery_task_logger.py
tests/fastapi/: test_error_responses.py  test_fastapi_access_logger.py  test_request_query.py  test_resource.py  test_security.py  test_service_context.py  test_service_lifespan.py  test_service_schema.py
tests/nanoid/: test_nanoid.py
tests/oauth2/: conftest.py  test_client_credentials.py  test_oauth2.py  test_service_auth.py  test_token.py  test_verifier.py
tests/s3/: test_key_mapper.py  test_sync_s3_gateway.py
tests/sql/: test_sql_builder.py  test_sql_gateway.py  test_sql_gateway_multitenant.py  test_sync_sql_gateway.py
tests/testing/: test_extract_minimum_requirements.py
(+2 files in other folders)
