[project]
name = "clean-python"
description = "Clean architecture in Python"
authors = [
    {name = "Nelen & Schuurmans", email = "info@nelen-schuurmans.nl"},
]
readme = "README.md"
license = {text = "MIT"}
# Get classifier strings from http://www.python.org/pypi?%3Aaction=list_classifiers
classifiers = ["Programming Language :: Python"]
keywords = []
requires-python = ">=3.10"
dependencies = ["pydantic==2.6.*", "inject==4.*", "asgiref==3.7.*", "blinker==1.7.*", "async-lru==2.0.*", "backoff==2.2.*", "pyyaml==6.0.*"]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio==0.21.*",  # https://github.com/pytest-dev/pytest-asyncio/issues/706
    "debugpy",
    "httpx",
    "uvicorn",
    "python-multipart",
    "pytest-celery<1"
]
fastapi = ["fastapi==0.110.*"]
auth = ["pyjwt==2.8.*", "cryptography==42.0.*"]  # pyjwt[crypto]
amqp = ["pika==1.3.*"]
celery = ["celery==5.3.*"]
fluentbit = ["fluent-logger"]
sql = ["sqlalchemy==2.0.*", "asyncpg==0.29.*"]
sql-sync = ["sqlalchemy==2.0.*", "psycopg2-binary==2.9.*"]
# help the resolver a bit by copying version pins from aioboto3 / aiobotocore
s3 = ["aioboto3==13.0.*", "aiobotocore==2.13.0", "boto3==1.34.106", "types-aioboto3[s3]"]
s3-sync = ["boto3==1.34.*", "boto3-stubs[s3]"]
api-client = ["aiohttp==3.9.*", "urllib3==2.0.*"]
profiler = ["yappi"]
debugger = ["debugpy"]
nanoid = ["nanoid==2.0.0"]

[project.urls]
homepage = "https://github.com/nens/clean-python"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["clean_python*"]
# package names should match these glob patterns (["*"] by default)

[tool.setuptools.dynamic]
version = {attr = "clean_python.__version__"}

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
force_single_line = true

[tool.pytest.ini_options]
norecursedirs=".venv data doc etc *.egg-info misc var build lib include"
python_files = "test_*.py"
