[project]
name = "clean-python"
description = "Clean architecture in Python"
authors = [
    {name = "Nelen & Schuurmans", email = "info@nelen-schuurmans.nl"},
]
readme = "README.md"
license = {text = "MIT"}
# Get classifier strings from http://www.python.org/pypi?%3Aaction=list_classifiers
classifiers = ["Programming Language :: Python"]
keywords = []
requires-python = ">=3.10"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/nens/clean-python"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["clean_python*"]
# package names should match these glob patterns (["*"] by default)

[tool.setuptools.dynamic]
version = {attr = "clean_python.__version__"}
dependencies = {file = ["requirements/base.txt"]}
optional-dependencies.fastapi = { file = ["requirements/fastapi.txt"] }
optional-dependencies.auth = { file = ["requirements/auth.txt"] }
optional-dependencies.amqp = { file = ["requirements/amqp.txt"] }
optional-dependencies.celery = { file = ["requirements/celery.txt"] }
optional-dependencies.fluentbit = { file = ["requirements/fluentbit.txt"] }
optional-dependencies.sql = { file = ["requirements/sql.txt"] }
optional-dependencies.sql-sync = { file = ["requirements/sql_sync.txt"] }
optional-dependencies.s3 = { file = ["requirements/s3.txt"] }
optional-dependencies.s3-sync = { file = ["requirements/s3_sync.txt"] }
optional-dependencies.api-client = { file = ["requirements/api_client.txt"] }
optional-dependencies.nanoid = { file = ["requirements/nanoid.txt"] }


[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
force_single_line = true

[tool.pytest.ini_options]
norecursedirs=".venv data doc etc *.egg-info misc var build lib include"
python_files = "test_*.py"
