[project]
name = "clean-python"
description = "Clean architecture in Python"
authors = [
    {name = "Nelen & Schuurmans", email = "info@nelen-schuurmans.nl"},
]
readme = "README.md"
license = {text = "MIT"}
# Get classifier strings from http://www.python.org/pypi?%3Aaction=list_classifiers
classifiers = ["Programming Language :: Python"]
keywords = []
requires-python = ">=3.10"
dependencies = ["pydantic>=2.9", "inject>=5", "asgiref>=3.8", "blinker>=1.8", "async-lru>=2.0", "backoff>=2.2", "pyyaml>=6.0.1"]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio==0.21.*",  # https://github.com/pytest-dev/pytest-asyncio/issues/706
    "debugpy",
    "httpx",
    "uvicorn",
    "python-multipart",
    "pytest-celery<1",
    "packaging"
]
fastapi = ["fastapi>=0.115"]
auth = ["pyjwt[crypto]>=2.9"]
amqp = ["pika>=1.3"]
celery = ["celery>=5.4"]
fluentbit = ["fluent-logger"]
sql = ["sqlalchemy>=2", "asyncpg>=0.30", "greenlet>=3"]
sql-sync = ["sqlalchemy>=2"]  # also requires psycopg2 or psycopg2-binary
s3 = ["aioboto3>=13.1", "types-aioboto3[s3]"]
s3-sync = ["boto3>=1.34.70", "boto3-stubs[s3]"]
api-client = ["aiohttp>=3.10", "urllib3>=2.0.2"]
profiler = ["yappi"]
debugger = ["debugpy"]
nanoid = ["nanoid>=2"]

[project.urls]
homepage = "https://github.com/nens/clean-python"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["clean_python*"]
# package names should match these glob patterns (["*"] by default)

[tool.setuptools.dynamic]
version = {attr = "clean_python.__version__"}

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
force_single_line = true

[tool.pytest.ini_options]
norecursedirs=".venv data doc etc *.egg-info misc var build lib include"
python_files = "test_*.py"
